# SpaceshipmentLevelEditor

./: .gitignore  Cargo.toml  README.md  build_for_linux.sh  build_for_windows.sh  flake.nix
assets/: level.obl
levels/: 17core.obl  dad_level_1.obl  dad_level_2.obl  dad_level_3.obl  level-001.obl  level-003.obl  level-004.obl  level-005.obl  level-006.obl  level-1.obl  z17core.obl
src/: context.rs  main.rs  renderer.rs  tick.rs
src/app/: context.rs  mod.rs  renderer.rs  tick.rs
src/app/context/: app_state.rs  event.rs  global_keybinds.rs  level_data.rs  save_load.rs  selection.rs  simulation.rs
src/app/context/global_keybinds/: incremental_path.rs
src/app/context/simulation/: planet.rs  player.rs  target.rs  vec2f.rs  wall.rs
src/app/renderer/: draw_objects.rs  screenshot.rs
src/context/: app_state.rs  planet.rs  player.rs  save_load.rs  selection.rs  simulation.rs  target.rs  vec2f.rs
src/context/simulation/: planet.rs  player.rs  target.rs  vec2f.rs
src/renderer/: fonts.rs  mod.rs
